# esp32

./: .gitignore
.agent/: all_audit_files.txt  audit_master_log.md
.agent/workflows/: gui.md
.github/workflows/: chimera_deploy.yml  firmware_build.yml
art/: Unconfirmed 285147.crdownload  esp32-gui-workflow.md  research.md
chimera_red/: .gitignore  CONTEXT.md  README.md  WIRING_GUIDE.md  git_objects.txt  git_objects_v2.txt
chimera_red/.agent/: audit_master_log.md  critique-and-fix.md  implementation_plan.md
chimera_red/android_client/: CONTEXT.md  build.gradle.kts  build_error.txt  build_error_2.txt  build_error_3.txt  build_error_4.txt  build_error_5.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_android.txt  build_log_android_final.txt  build_log_android_final_gson.txt  build_log_android_final_ui.txt  build_log_android_fixed.txt  build_log_android_gson.txt  build_log_android_pixel_icons.txt  build_log_android_v2.txt  build_log_final_v1.2.txt  build_log_stacktrace.txt  build_log_terminal.txt  build_output.txt  error_log.txt  final_test_output.txt  gradle.properties  launch_app.ps1  local.properties  settings.gradle.kts  test_debug_output.txt  (+1 more)
chimera_red/android_client/app/src/main/cpp/: CMakeLists.txt  vulkan_cracker.cpp
chimera_red/firmware/main/: CMakeLists.txt  ble_scanner.c  ble_scanner.h  buttons.c  buttons.h  display.c  font5x7.h  gui.c  main.c  nfc_pn532.c  nfc_pn532.h  serial_comm.c  serial_comm.h  subghz_cc1101.c  subghz_cc1101.h  wifi_manager.c  wifi_manager.h
firmwares/: README.md
(+146 files in other folders)
